--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="css/cta.css">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/footer.css">
+
+    <link rel="stylesheet" href="css-responsive/headerR.css">
+    <link rel="stylesheet" href="css-responsive/storyR.css">
+    <link rel="stylesheet" href="css-responsive/menuR.css">
+    <link rel="stylesheet" href="css-responsive/produtosR.css">
+    <link rel="stylesheet" href="css-responsive/formR.css">
+    <link rel="stylesheet" href="css-responsive/feedR.css">
+    <link rel="stylesheet" href="css-responsive/ctaR.css">
+    <link rel="stylesheet" href="css-responsive/blogR.css">
+    <link rel="stylesheet" href="css-responsive/footerR.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-XXXXXXX" crossorigin="anonymous" />
     <link rel="icon" href="img/logo.png">
 
